# Diffusion_Assembly

./: .gitignore  CITATION.cff  Dockerfile  LICENSE  README.md  analysis.py  check_integrity.py  monorepo  pyproject.toml  qm9_chon_ai.csv  reproduce.py  requirements.txt  sample.py
assembly_diffusion/: __init__.py  __main__.py  ai_mc.py  ai_surrogate.py  assembly_index.py  backbone.py  canonicalize.py  cli.py  compute_ai.py  config.py  data.py  edit_vocab.py  forward.py  graph.py  guidance.py  logging.py  logging_config.py  mask.py  monitor.py  pipeline.py  policy.py  qed_sa.py  qm9_ai.py  repro.py  run_logger.py  sampler.py  sascorer.py  schedule.py  se3_guidance.py  stats.py  train.py
configs/: exp01.yaml  registry.yaml  run.yml  schema.yaml
demo/: air_map.csv  assets.csv  drains_vents.csv  energy_sources.csv  line_list.csv  rules_huntly.yml  valves.csv
docs/: 00_objectives.md  01_grammar.md  02_surrogate.md  03_guidance.md  grammar.md  grammar_parity.md  rank_stability.md  tracked_issues.md
env/: Dockerfile  conda.yml
loto/: graph_builder.py  isolation_planner.py  logging_setup.py  rule_engine.py  sim_engine.py
scripts/: ab_compare.py  aggregate.py  analyze_calibrators.py  check_registry.py  compute_ai.py  experiment.py  fit_slope.py  plots.py  run_calibrators.py  run_unguided_small.ps1  run_unguided_small.sh  sample.py  summarize_dmin.py  train_surrogate.py
tests/: conftest.py  test_analysis.py  test_assemblymc_adapter.py  test_calibrators.py  test_canonicalize_utils.py  test_compute_ai.py  test_config_loader.py  test_data.py  test_demo_csvs.py  (+35 more)
(+31 files in other folders)
