[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "assembly_diffusion"
version = "0.1.0"
description = "Prototype package for molecular assembly diffusion"
requires-python = ">=3.8"
dependencies = [
    "torch",
    "pyyaml",
    "numpy",
    "pandas",
    "scipy",
    "statsmodels",
    "rdkit-pypi>=2022.9.5",
    "networkx",
]

[project.scripts]
assembly-diffusion = "assembly_diffusion.cli:main"

[tool.setuptools.packages.find]
where = ["."]
